[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-bluesky"
classifiers = ["Programming Language :: Python :: 3.12"]
description = "Testing the nomad API for how we should push our bluesky documents."
dependencies = [
  "event-model",
  "requests",
  "bluesky",
  "psutil",
  "tiled[all]",
  "zmq",
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
GitHub = "https://github.com/evalott100/NomadBluesky"

[[project.authors]]
email = "evalott100@gmail.com"
name = "Eva Lott"

[tool.setuptools_scm]
version_file = "nomad_bluesky/_version.py"

[project.optional-dependencies]
dev = ["ruff"]
examples = ["ophyd-async"]
